--- a/static/CSS/estilofooter.css
+++ b/static/CSS/estilofooter.css
@@ -27,3 +27,36 @@ footer .footer-below {
 .columna{
     background-color: black;
 }
+.center {
+  text-align: center;
+}
+.pagination {
+  display: inline-block;
+}
+
+.pagination a {
+  color: black;
+  float: left;
+  padding: 8px 16px;
+  text-decoration: none;
+  border: 1px solid #ddd;
+}
+
+.pagination a.active {
+  background-color: rgba(185, 35, 245);
+  color:white;
+  border: 1px solid rgba(185, 35, 245);
+}
+
+.pagination a:hover:not(.active) {background-color: rgba(243, 217, 246);}
+
+.pagination a:first-child {
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+}
+
+.pagination a:last-child {
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+}
+
