--- a/templates/cont_event.html
+++ b/templates/cont_event.html
@@ -2,20 +2,28 @@
 {% from "form_macros.html" import show_field ,show_radio_field, show_submit_field %}
 {% extends "index.html" %}
 {% block contenido %}
+
     <div class="container-fluid">
         <div class="row">
             <div class="col-lg-8 col-md-8 col-sm-8 offset-2 float-md-center">
                 <div class="jumbotron">
                     <div class="row">
-                        <div class="col-lg-6 col-md-12 col-sm-12 ">
+                        <div class="col-lg-12 col-md-12 col-sm-12 ">
                             <h1 class="display-4">{{ particular_event["nombre"] }}</h1>
-                            <img src="{{ url_for('static',filename='Imagenes/Event2.jpg') }}" alt="EVENT"
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-lg-6 col-md-12 col-sm-12 ">
+                            <img src="{{ url_for('static',filename='Save/'+ particular_event.imagen) }}" alt="EVENT"
                                  class="img-event">
                             <p class="lead">{{ particular_event["descripcion"] }}</p>
                             {% if current_user.is_authenticated %}
-                                <a class="btn btn-light btn-lg btn-ce" href="#" role="button">Comprar Entradas</a>
+                                <a class="btn btn-light btn-lg btn-ce" href="#" role="button">Comprar
+                                    Entradas</a>
                             {% endif %}
                         </div>
+
                         <div class="col-lg-6 col-md-6 col-sm-6">
                             <div class="row">
                                 <div class="col-lg-12 col-md-12 col-sm-12">
@@ -40,6 +48,7 @@
                                             class="imgcalen">Tipo:{{ particular_event["tipo"] }}</p>
                                 </div>
                             </div>
+
                             <div class="row">
                                 <div class="form-group col-sm-6">
                                     <p class="fecha"><img src="{{ url_for('static',filename='Imagenes/clock.png') }}"
@@ -72,10 +81,10 @@
                                 </div>
                             </div>
                         </div>
+
                     </div>
                 </div>
             </div>
         </div>
-    </div>
 
 {% endblock %}
