--- a/templates/cont_index.html
+++ b/templates/cont_index.html
@@ -47,23 +47,26 @@
             {% endfor %}
         </div>
     </div>
- <!---------------------------------------------------PAGINACION----------------------------------------------------------------->
+    <!---------------------------------------------------PAGINACION----------------------------------------------------------------->
     <div class="row">
-        <div class="col-md-12" style="text-align:center">
-            {% if listevent.hast_prev %}
-                <a href="{{ url_for('index', pag=listevent.prev_num) }}">Anterior</a>
-            {% endif %}
-            {% for i in range(1,(listevent.pages + 1)) %}
-                {% if listevent.page == i %}
-                    {{ i }}
-                {% else %}
-                    <a href="{{ url_for('index', pag=i) }}">{{ i }}</a>
-                {% endif %}
-            {% endfor %}
-            |
-            {% if listevent.has_next %}
-                <a href="{{ url_for('index', pag=listevent.next_num) }}">Siguiente</a>
-            {% endif %}
+        <div class="col-md-12">
+            <div class="center">
+                <div class="pagination">
+                    {% if listevent.hast_prev %}
+                        <a href="{{ url_for('index', pag=listevent.prev_num) }}">Anterior</a>
+                    {% endif %}
+                    {% for i in range(1,(listevent.pages + 1)) %}
+                        {% if listevent.page == i %}
+                            <a class="active" href="#">{{ i }}</a>
+                        {% else %}
+                            <a href="{{ url_for('index', pag=i) }}">{{ i }}</a>
+                        {% endif %}
+                    {% endfor %}
+                    {% if listevent.has_next %}
+                        <a href="{{ url_for('index', pag=listevent.next_num) }}">Siguiente</a>
+                    {% endif %}
+                </div>
+            </div>
         </div>
     </div>
 {% endblock %}
