--- a/templates/macro.html
+++ b/templates/macro.html
@@ -126,14 +126,22 @@
         </div>
     {% endif %}
 {% endmacro %}
+
 {% macro show_comment(comment) %}
     <div class="row">
         <div class="col-lg-12 col-md-12 col-sm-12">
             <p class="comen1">
                 <img src="{{ url_for('static',filename='Imagenes/graduate.png') }}" align="left" class="imgcomen">
                 <b>{{ comment.user.nombre }} {{ comment.user.apellido }}: </b>{{ comment.contenido }}
+                {% if current_user.is_owner(comment) %}
+                    <a href="{{ url_for('delete_comment', eventId = comment["comentarioId"]) }}"><img
+                            src="{{ url_for('static',filename='Imagenes/garbage.png') }}" class="editar">
+                        <span class="icon-cross iconStyle"></span>
+                        </button>
+                    </a>
+                {% endif %}
                 {% if current_user.is_authenticated and current_user.admin == True %}
-                    <a href="{{ url_for('delete_comment_admin', eventId = comment["comentarioId"]) }}"><img
+                    <a href="{{ url_for('delete_comment', eventId = comment["comentarioId"]) }}"><img
                             src="{{ url_for('static',filename='Imagenes/garbage.png') }}" class="editar">
                         <span class="icon-cross iconStyle"></span>
                         </button>
