--- a/templates/mail/error.html
+++ b/templates/mail/error.html
@@ -20,7 +20,7 @@
                         <h1 style="color:white;">
                             <img src="http://pluspng.com/img-png/avengers-logo-png-combatants-1000.png"
                                  class="img-mail" style="width:100px; height: 100px; position:relative;"/>
-                            Bienvenidos a Avents</h1>
+                            ERROR!</h1>
                     </td>
                 </tr>
                 <tr>
@@ -28,7 +28,7 @@
                         <table border="0" cellpadding="0" cellspacing="0" width="100%">
                             <tr>
                                 <td style=" font-family: Arial, sans-serif; font-size: 24px;">
-                                    <b>Ocurrio un Error!</b>
+                                    <b>Ocurrio un Error!. Resolverlo inmediatamente</b>
                                 </td>
                             </tr>
                             <tr>
@@ -49,27 +49,6 @@
                                     width="75%">
                                     Copyright © 2013-2019 Avents Company S.L. All rights reserved.<br/>
                                     <a href="#" style="color: #ffffff;">
-                                </td>
-                                <td align="right" width="25%">
-                                    <table border="0" cellpadding="0" cellspacing="0">
-                                        <tr>
-                                            <td style="font-family: Arial, sans-serif; font-size: 12px; font-weight: bold;">
-                                                <a href="http://www.twitter.com/" style="color: #ffffff;">
-                                                    <img src="https://images.vexels.com/media/users/3/137419/isolated/preview/b1a3fab214230557053ed1c4bf17b46c-icono-de-twitter-logo-by-vexels.png"
-                                                         alt="Twitter" width="55" height="55"
-                                                         style="display: block;" border="0"/>
-                                                </a>
-                                            </td>
-                                            <td style="font-size: 0; line-height: 0;" width="20">&nbsp;</td>
-                                            <td style="font-family: Arial, sans-serif; font-size: 12px; font-weight: bold;">
-                                                <a href="http://www.facebook.com/" style="color: #ffffff;">
-                                                    <img src="https://images.vexels.com/media/users/3/137253/isolated/preview/90dd9f12fdd1eefb8c8976903944c026-icono-de-facebook-logo-by-vexels.png"
-                                                         alt="Facebook" width="55" height="55"
-                                                         style="display: block;" border="0"/>
-                                                </a>
-                                            </td>
-                                        </tr>
-                                    </table>
                                 </td>
                             </tr>
                         </table>
