--- a/templates/error/404.html
+++ b/templates/error/404.html
@@ -1,4 +1,23 @@
 {% extends "index.html" %}
 {% block contenido %}
-    <h1>PAGINA NO ENCONTRADA</h1>
+
+    <head>
+        <style>
+            body {
+                background-image: url(/static/Imagenes/404NotFound.jpg);
+                background-position: center center;
+                background-repeat: no-repeat;
+                background-attachment: fixed;
+                background-size: cover;
+                background-color: rgba(255, 255, 255);
+            }
+        </style>
+    </head>
+
+
+    <body>
+    <div class="null">
+
+    </div>
+    </body>
 {% endblock %}
