--- a/templates/event_edit.html
+++ b/templates/event_edit.html
@@ -13,7 +13,7 @@
                                 {{ show_field(formCreate.nameEvent, class='form-control' ) }}
                                 <div class="form-group">
                                     <img class="img_update"
-                                         src="{{ url_for('static', filename='Imagenes/'+ formCreate.image.data) }} "
+                                         src="{{ url_for('static', filename='Save/'+ formCreate.image.data) }} "
                                          alt="">
                                 </div>
                                 {{ show_field(formCreate.description, class='form-control' ) }}
