--- a/templates/mail/error.html
+++ b/templates/mail/error.html
@@ -20,7 +20,7 @@
                         <h1 style="color:white;">
                             <img src="http://pluspng.com/img-png/avengers-logo-png-combatants-1000.png"
                                  class="img-mail" style="width:100px; height: 100px; position:relative;"/>
-                            Bienvenidos a Avents</h1>
+                            ERROR!</h1>
                     </td>
                 </tr>
                 <tr>
