--- a/templates/error/500.html
+++ b/templates/error/500.html
@@ -1,4 +1,21 @@
 {% extends "index.html" %}
 {% block contenido %}
-    <h1>INTERNAL SERVER ERROR</h1>
+    <head>
+        <style>
+            body {
+                background-image: url(/static/Imagenes/500InternalServer.jpg);
+                background-position: center center;
+                background-repeat: no-repeat;
+                background-attachment: fixed;
+                background-size: cover;
+                background-color: rgba(255, 255, 255);
+            }
+        </style>
+    </head>
+
+    <body>
+    <div class="null">
+
+    </div>
+    </body>
 {% endblock %}
