--- a/templates/index.html
+++ b/templates/index.html
@@ -134,7 +134,7 @@
                 </li>
 
                 <li>
-                    <img src="{{ url_for('static',filename='Imagenes/placeholder.png') }}" alt="lugar" class="imgfoo">261
+                    <img src="{{ url_for('static',filename='Imagenes/placeholderFooter.png') }}" alt="lugar" class="imgfoo">261
                     Reel Avenue
                     Albuquerque, NM 87121
                 </li>
