--- a/templates/index.html
+++ b/templates/index.html
@@ -73,7 +73,7 @@
 </nav>
 <div class="container">
     <div class="row">
-        <div class="col-md-12">
+        <div class="col-md-12" style="text-align: center">
             {% with messages = get_flashed_messages(with_categories=true) %}
                 {% if messages %}
                     {% for category, message in messages %}
