--- a/templates/mail/event.html
+++ b/templates/mail/event.html
@@ -35,7 +35,7 @@
                                 <td style="padding: 20px 0 30px 0; color: #153643; font-family: Arial, sans-serif; font-size: 16px; line-height: 20px;">
                                     <p> Tu evento {{ event.nombre }} que se realizara el
                                         dia {{ event.fecha.strftime("%d %B, %Y") }} ha sido aprobado en
-                                        nuestra pagina y ya se encuentra a la vista en la pagina! A disfrutar!!
+                                        nuestra pagina y ya se encuentra a la vista de todos! A disfrutar!!
                                     </p>
                                     <p> Saludos cordiales. Avents™ </p>
                                 </td>
