--- a/templates/macro.html
+++ b/templates/macro.html
@@ -93,7 +93,7 @@
     </div>
     <div class="col-2 col-md-2 border-caja">
         <div class="icons">
-            <a href="{{ url_for('delete_event_admin', eventId = event.eventoId) }}"><img
+            <a href="{{ url_for('delete_event', eventId = event.eventoId) }}"><img
                     src="{{ url_for('static',filename='Imagenes/garbage.png') }}" class="editar">
                 <span class="icon-cross iconStyle"></span>
                 </button>
