--- a/templates/macro.html
+++ b/templates/macro.html
@@ -1,11 +1,14 @@
 {% macro show_event(event) %}
     <div class=" col-lg-4 col-md-6 col-sm-6">
-        <div class="card">
-            <img src="{{ url_for('static',filename='Save/' + event.imagen) }}" class="card-img" alt="event">
-            <div class="card-body">
-                <h5 class="card-title">{{ event["nombre"] }}</h5>
-                <p class="card-text">{{ event["descripcion"] }} </p>
-                <a href="{{ url_for('event',eventId=event['eventoId']) }}" class="btn btn-link link-card">Ver más...</a>
+        <div class="card-deck">
+            <div class="card">
+                <img src="{{ url_for('static',filename='Save/' + event.imagen) }}" class="card-img" alt="event">
+                <div class="card-body">
+                    <h5 class="card-title">{{ event["nombre"] }}</h5>
+                    <p class="card-text">{{ event["descripcion"] }} </p>
+                    <a href="{{ url_for('event',eventId=event['eventoId']) }}" class="btn btn-link link-card">Ver
+                        más...</a>
+                </div>
             </div>
         </div>
     </div>
